// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CurrentCall should match snapshot muted 1`] = `
<View
  style={
    {
      "padding": 10,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#3F4350",
        "borderRadius": 5,
        "flexDirection": "row",
        "height": 64,
        "padding": 4,
        "width": "100%",
      }
    }
  >
    <CallAvatar
      userId=""
      volume={0}
    />
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <Text
        style={
          {
            "color": "#ffffff",
            "fontSize": 16,
            "fontWeight": "600",
          }
        }
      >
        No one is talking
      </Text>
      <Text
        style={
          {
            "color": "#ffffff",
            "opacity": 0.64,
          }
        }
      >
        ~Channel Name
      </Text>
    </View>
    <Pressable
      onPressIn={[Function]}
      style={
        {
          "zIndex": 10,
        }
      }
    >
      <CompassIcon
        name="arrow-expand"
        size={24}
        style={
          {
            "color": "#ffffff",
            "marginRight": 8,
            "padding": 8,
          }
        }
      />
    </Pressable>
    <TouchableOpacity
      onPress={[Function]}
      style={
        {
          "zIndex": 10,
        }
      }
    >
      <CompassIcon
        name="microphone-off"
        size={24}
        style={
          [
            {
              "backgroundColor": "#3DB887",
              "borderRadius": 4,
              "color": "#ffffff",
              "height": 42,
              "justifyContent": "center",
              "margin": 4,
              "overflow": "hidden",
              "padding": 9,
              "textAlign": "center",
              "textAlignVertical": "center",
              "width": 42,
            },
            {
              "backgroundColor": "transparent",
            },
          ]
        }
      />
    </TouchableOpacity>
  </View>
</View>
`;

exports[`CurrentCall should match snapshot unmuted 1`] = `
<View
  style={
    {
      "padding": 10,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#3F4350",
        "borderRadius": 5,
        "flexDirection": "row",
        "height": 64,
        "padding": 4,
        "width": "100%",
      }
    }
  >
    <CallAvatar
      userId=""
      volume={0}
    />
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <Text
        style={
          {
            "color": "#ffffff",
            "fontSize": 16,
            "fontWeight": "600",
          }
        }
      >
        No one is talking
      </Text>
      <Text
        style={
          {
            "color": "#ffffff",
            "opacity": 0.64,
          }
        }
      >
        ~Channel Name
      </Text>
    </View>
    <Pressable
      onPressIn={[Function]}
      style={
        {
          "zIndex": 10,
        }
      }
    >
      <CompassIcon
        name="arrow-expand"
        size={24}
        style={
          {
            "color": "#ffffff",
            "marginRight": 8,
            "padding": 8,
          }
        }
      />
    </Pressable>
    <TouchableOpacity
      onPress={[Function]}
      style={
        {
          "zIndex": 10,
        }
      }
    >
      <CompassIcon
        name="microphone"
        size={24}
        style={
          [
            {
              "backgroundColor": "#3DB887",
              "borderRadius": 4,
              "color": "#ffffff",
              "height": 42,
              "justifyContent": "center",
              "margin": 4,
              "overflow": "hidden",
              "padding": 9,
              "textAlign": "center",
              "textAlignVertical": "center",
              "width": 42,
            },
            undefined,
          ]
        }
      />
    </TouchableOpacity>
  </View>
</View>
`;
